# ZephyrDeviceTreeTest

./: .gitignore
app/: CMakeLists.txt  app.overlay  prj.conf  sample.yaml
app/src/: led.cpp  led.hpp  main.cpp
